use dev tools to fix overflow issue add border to plays section to fix issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,9 +58,10 @@ menu:hover{
 
 /* plays */
 #plays div{
-    width: 33.3%;
-    height: 300px;
+    width: 33%;
+    height: 500px;
     float: left;
+    border: 1px solid rgb(0, 0, 0);
 }
 
 /* table content
@@ -89,15 +90,13 @@ footer{
 #social-media{
     text-align: center;
 }
-#social-media li{
+#social-media > li{
     display: inline;
 }
-#copyright{
+/* #copyright{
     text-align: end;
     font-size: 120%;
-    margin: 0 40px 0 40px;
-    padding: 0 50px 0 50px;
-}
+} */
 #social-media i{
     font-size:  50px;
     margin: 0 40px 0 40px;
